mudando informações "dinamicamente"

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <h1>SENAI</h1>
-    <card-aluno></card-aluno>
+    <card-aluno nome="Maria" bgcolor="#FF6600"></card-aluno>
+    <card-aluno nome="Sônia" bgcolor="#004589"></card-aluno>
+    <card-aluno nome="Antônia"></card-aluno>
 </body>
 </html>
