mais testes com atribuição dinâmica

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>SENAI</h1>
     <card-aluno nome="Maria" bgcolor="#FF6600"></card-aluno>
-    <card-aluno nome="Sônia" bgcolor="#004589"></card-aluno>
-    <card-aluno nome="Antônia"></card-aluno>
+    <card-aluno nome="Sônia" bgcolor="#004589" turma="DS2M"></card-aluno>
+    <card-aluno nome="Antônia" turma="REDES"></card-aluno>
 </body>
 </html>
