--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <title>Web Component</title>
 </head>
 <body>
-    <h1>SENAI</h1>
-    <card-aluno nome="Maria" bgcolor="#FF6600"></card-aluno>
-    <card-aluno nome="Sônia" bgcolor="#004589" turma="DS2M"></card-aluno>
-    <card-aluno nome="Antônia" turma="REDES"></card-aluno>
+    <div class="container">
+        <card-aluno nome="Maria" bgcolor="#FF6600"></card-aluno>
+        <card-aluno nome="Sônia" bgcolor="#004589" turma="DS2M"></card-aluno>
+        <card-aluno nome="Antônia" turma="REDES"></card-aluno>
+    </div>
 </body>
 </html>
