--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Web Component</title>
 </head>
 <body>
-    <div class="container">
+    <div id="container">
         <card-aluno nome="Maria" bgcolor="#FF6600"></card-aluno>
         <card-aluno nome="Sônia" bgcolor="#004589" turma="DS2M"></card-aluno>
         <card-aluno nome="Antônia" turma="REDES"></card-aluno>
