criando os cards com dados vindos de um array

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div id="container">
-        <card-aluno nome="Maria" bgcolor="#FF6600"></card-aluno>
+        <!-- <card-aluno nome="Maria" bgcolor="#FF6600"></card-aluno>
         <card-aluno nome="Sônia" bgcolor="#004589" turma="DS2M"></card-aluno>
-        <card-aluno nome="Antônia" turma="REDES"></card-aluno>
+        <card-aluno nome="Antônia" turma="REDES"></card-aluno> -->
     </div>
 </body>
 </html>
